Fix styling Add additional gap to rows in calculator grid

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,8 @@
   grid-template-columns: repeat(4, 1fr);
   background-color: rgb(0, 0, 0);
   border-radius: 50%;
-  aspect-ratio: 1/1.25;
+  aspect-ratio: 1/1.295;
+  row-gap: 1.5px;
 }
 
 
@@ -49,7 +50,6 @@
   transition: opacity 0.2s ease-in-out;
   margin: 1.5px;
 }
-
 
 .operator{
   background-color: #f1a33c;
